simplify Spring component scan setup (#222)
* move files

* simplify component scan setup